[package]
name = "linkspeedtest"
version = "0.1.0"
edition = "2021"
description = "A simple tool to test the speed of a link"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "speettestclient"
path = "src/client/main.rs"

[[bin]]
name = "speettestserver"
path = "src/server/main.rs"

[dependencies]
